# Lattice-Probe

./: .gitignore  CHECKLIST.md  CLAUDE.md  CODEGUIDE.md  COLAB_NOTEBOOK_GENERATE.md  CRYPTOGRAPHY_REVIEW_REPORT.md  Dockerfile  GET_PARAMS.md  LICENSE  README.md  REPORT.md  REPRODUCE.md  REVIEW.md  REVIEW_REPORT.md  SCIENTIFIC_REVIEW_REPORT.md  SYSTEM_OVERVIEW.md  clean_nb.py  execution_guide.md  fix_nb.py  patch_notebook.py  pyproject.toml  requirements.txt  robust_nb.py  test_nb.py
results/: RESULTS_TABLE.md  results.csv
scripts/: analyze_scaling.py  bit_recovery.py  evaluate.py  generate_dataset.py  interpret.py  sweep_sample_efficiency.py  train.py
src/latticeprobe/: baselines.py  datasets.py  params.py  prng.py  representations.py  ring.py  sampler.py
src/latticeprobe/models/: gnn.py  transformer.py
tests/: test_architecture.py  test_models.py  test_pipeline.py  test_representations.py  test_ring.py  test_sampler.py
