[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latticeprobe"
version = "0.1.0"
description = "AI-accelerated cryptanalysis framework for lattice-based schemes"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "einops>=0.7.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
